start of lecture jan 26

--- a/lec.tex
+++ b/lec.tex
@@ -87,3 +87,6 @@ The set of functions form the set of positive integers to positive integers is n
 The set of total nomadic functions from the set of positive integers, $F^{1}$, is not enumerable.
 
 It's a Proof by contradiction.
+
+%Another lecture.
+%We now go into more turing machines stuffs.
