--- a/notes.tex
+++ b/notes.tex
@@ -17,7 +17,8 @@
 \usepackage{mathtools}
 \usepackage{listings}
 \usepackage{algorithm2e}
-
+\usepackage{tikz}
+\usetikzlibrary{arrows,automata,positioning}
 
 \newtheorem{proposition}{Proposition}
 \newtheorem{theorem}{Theorem}
