Better definition of surjective

--- a/lec.tex
+++ b/lec.tex
@@ -43,7 +43,8 @@ Cartesian product: A of B: $A \cross B$: $\{<x,y>: x \in A \land y \in B \}$ (AL
 
 \item $f^{-1}$ is the inverse of the function $f$ from the set $A$ to the set $B$ iff:if for every member $b \in B$, there is exactly one member of $a \in A$ such that $f(a)=b$, then $f^{-1}(b)=a$, otherwise $f^{-1}(b)$ is undefined.
 
-\item $f$ is onto $B$ iff $B$ is the range of $f$ (Surjective)
+\item $f$ is onto $B$ iff $B$ is the range of $f$ (Surjective) \\ 
+Alt: (wikipedia) : $\forall y \in Y, \exists x \in X | y=f(x)$
 \item $f$ is one-to-one iff $\forall x \forall y (f(x)=f(y)\implies x=y)$ (Injective)
 \item $f$ is a bijection iff $f$ is onto and one-to-one.
 \item $f$ is a correspondence iff $f$ is total, one-to-one and onto.
