Fixed error in my notes.

--- a/lec.tex
+++ b/lec.tex
@@ -30,8 +30,11 @@ Cartesian product: A of B: $A \cross B$: $\{<x,y>: x \in A \land y \in B \}$ (AL
 \item Euclidean : $\forall x \forall y \forall z ((Rxy \land Rxz ) \implies Ryz)$
 \item a equivalence relation : it's symmetric,reflexive,transitive.
 \item a (partial) function : $\exists x$ and there is at most one y: $Rxy$ : denoted $f$
+\item a (partial) function :  $\exists x , \exists y | Rxy$ : denote $f$.
 \item a (total) function: assigns a value to each number of $A$ : denoted $f$
 %\item a inverse function: if $\forall x $...?
+\item a (total) function$^{2}$: $\forall x , \exists y | Rxy$: denoted $f$.
+
 \end{itemize}
 
 \item Domain: The set of a functions arguments. 
