Added notes of the thing I don't understand.... Still don't understand it.

--- a/lec.tex
+++ b/lec.tex
@@ -87,6 +87,16 @@ Then $L_r : r_1,r_2,r_3....$ written in a notation of  $0.n_1 n_2 n_3$.($n being
 
 %Remark
 The set of functions form the set of positive integers to positive integers is not enumerable.
+\begin{proof}
+Suppose S is enumerable.\\
+Then there is a list $L_s$ of the members of $S$.\\
+$L_s = \{ s_1,s_2,s_3,\cdots \}$\\
+Let $\forall n \in \mathbb{N}, n \in k \iff n \not \in S_n$\\
+$k$ is a set of positive intigers. \\
+so There is a number $j$such that $k=s_j$.
+So $j \in S_j \iff j \not in S_j$ \\
+Hence $S$ is not enumerable. \\
+\end{proof}
 
 The set of total nomadic functions from the set of positive integers, $F^{1}$, is not enumerable.
 
