--- a/lec.tex
+++ b/lec.tex
@@ -282,6 +282,7 @@ $f_n(n) = 2$
 $g(n) = 1$
 \item Case 1.2: Halted in non-SFC: $f_n$ is undefined.
 $f_n(n) \not=2$
+\end{itemize}
 $g(n)=2$
 \item Case 2: S* eventually halts with output 2
 We know that $M_n$ will never halt after it is started with input $n$. \\
