blake broke everything

--- a/lec.tex
+++ b/lec.tex
@@ -283,8 +283,9 @@ $g(n) = 1$
 \item Case 1.2: Halted in non-SFC: $f_n$ is undefined.
 $f_n(n) \not=2$
 \end{itemize}
+\large
 And then blake broke it: \\
-\large As it's a halting problem to figure out if it's in $SFC$?\\
+As it's a halting problem to figure out if it's in $SFC$?\\
 \normalsize
 $g(n)=2$
 \item Case 2: S* eventually halts with output 2
