--- a/lec.tex
+++ b/lec.tex
@@ -284,7 +284,7 @@ $g(n) = 1$
 $f_n(n) \not=2$
 \end{itemize}
 \large {
-And then blake broke it: \\
+And then Blake broke it: \\
 As it's a halting problem to figure out if it's in $SFC$?\\ }
 \normalsize
 $g(n)=2$
