added erics alt eculidean def.

--- a/lec.tex
+++ b/lec.tex
@@ -29,6 +29,7 @@ Cartesian product: A of B: $A \cross B$: $\{<x,y>: x \in A \land y \in B \}$ (AL
 \item transitive : $\forall x \forall y \forall z ((Rxy \land Ryz) \implies Rxz)$
 \item Euclidean : $\forall x \forall y \forall z ((Rxy \land Rxz ) \implies Ryz)$
 \item a equivalence relation : it's symmetric,reflexive,transitive.
+\item a equivalence relation (alt) : it's symmetric, and euclidean.
 \item a (partial) function : $\exists x$ and there is at most one y: $Rxy$ : denoted $f$
 \item a (partial) function$^{1}$ :  $\exists x , \exists y | Rxy$ : denoted $f$.
 \item a (total) function: assigns a value to each number of $A$ : denoted $f$
