the last thing he said.

--- a/lec.tex
+++ b/lec.tex
@@ -362,3 +362,12 @@ A model $M$ (interpretation) of a language $L$ is $\{|M| v\}$ Where $|M|$ is a n
 \begin{definition}[Truth]
 $M \vDash F^n (t_1,\dots,t_n)$ iff $<M(t_1),\dots,M(t_n)> \in M(F^n)$.
 \end{definition}
+
+\begin{definition}
+of the denoteizan/extension of a closed term in a model M.
+If $T$ is a name $M(t) = v(t)$
+I $t$ is $f^n(t_1,\dots,t_n)$
+then \\
+$M(f^n(t_1,\dots,t_n)$
+$M(f^n)(M(t_1),\dots,M(t_n)).$
+\end{definition}
