ANOTHER LECTURE DONE.

--- a/lec.tex
+++ b/lec.tex
@@ -421,3 +421,6 @@ so: $M^+ \vDash B$ \\
 So: $M^+ \vDash C$ \\
 So $M \vdash C$ (By the ext, llemma) \\
 \end{itemize}
+
+If the decision problem (for implication) is solvable, then the halting problem is solvable.
+There is an effective methoid for specifiing for any Turing machine $M$ and any input $N$ a finite set of setences $\delta$ and a sentence $H$ such that $/delta \vDash H$ iff $M$ eventually halts after starting with input $n$.
