attempted to understand.

--- a/lec.tex
+++ b/lec.tex
@@ -509,3 +509,38 @@ $\forall n$( if $M$ has not halted before time n, then $\Delta \vDash \mathbb{D}
 
 \end{enumerate}
 \end{proof}
+
+
+\large{First-Order Logic Revamp:}
+Some definitions for first-order logic: \\
+\begin{itemize}
+\item Logical Symbols: \\
+\begin{itemize} 
+\item Negation: ~ : 'not'
+\item Conjunction: \&, $\wedge$: 'and'
+\item Disjunction: $\vee$ : 'or'
+\item Conditional: $\rightarrow$ : 'if \dots then \dots'
+\item Biconditional: $\leftrightarrow$ : 'if and only if'
+\item Universal quantification: $\forall x$ : 'for every x'
+\item Existential quantification: $\exists x$ : 'for some x'
+\item Identity symbol: $=$ : '\dots is (the very same thing as ) \dots'
+\item Variables: x, y, z
+\item Punctuation: '(', ')' , ','
+\end{itemize}
+\item Nonlogical Symbols:
+\begin{itemize}
+\item Constants or Individual symbols (a,b,c .. )
+\item Predicates or Relation symbols : Have a fixed positive number of places
+\item Function symbols: : Have a fixed positive number of places.
+\end{itemize}
+%End-Symbols
+\item Other-Definitions:
+\begin{itemize}
+\item language: an enumerable set of nonlogical symbols. Denoted: $L$ \\
+Empty Language: $L_\varnothing$, The language with no logical symbols.
+\item 
+
+\end{itemize} %End-other defintions
+
+\end{itemize} %end some defs for first-order logic.
+
