--- a/lec.tex
+++ b/lec.tex
@@ -306,8 +306,8 @@ Some symbols n things:
 \begin{itemize}
 \item ( 
 \item ) 
-\item ' %No idea what this thing does.
-\item - %Nor this really
+\item Successor : ' %From the textbook anyways.
+\item Not: -
 \item And: $\wedge$ (Conjunction)
 \item Or: $\vee$ (Disjunction)
 \item Exists: $\exists$ 
@@ -509,3 +509,47 @@ $\forall n$( if $M$ has not halted before time n, then $\Delta \vDash \mathbb{D}
 
 \end{enumerate}
 \end{proof}
+
+
+\large{First-Order Logic Revamp:}
+Some definitions for first-order logic: \\
+\begin{itemize}
+\item Logical Symbols: \\
+\begin{itemize} 
+\item Negation: ~ : 'not'
+\item Conjunction: \&, $\wedge$: 'and'
+\item Disjunction: $\vee$ : 'or'
+\item Conditional: $\rightarrow$ : 'if \dots then \dots'
+\item Biconditional: $\leftrightarrow$ : 'if and only if'
+\item Universal quantification: $\forall x$ : 'for every x'
+\item Existential quantification: $\exists x$ : 'for some x'
+\item Identity symbol: $=$ : '\dots is (the very same thing as ) \dots'
+\item Variables: x, y, z
+\item Punctuation: '(', ')' , ','
+\end{itemize}
+\item Nonlogical Symbols:
+\begin{itemize}
+\item Constants or Individual symbols (a,b,c .. )
+\item Predicates or Relation symbols : Have a fixed positive number of places
+\item Function symbols: : Have a fixed positive number of places.
+\end{itemize}
+%End-Symbols
+\item Other-Definitions:
+\begin{itemize}
+\item language: an enumerable set of nonlogical symbols. Denoted: $L$ \\
+Empty Language: $L_\varnothing$, The language with no logical symbols.
+\end{itemize} %End-other defintions
+
+\item Closure:
+\begin{itemize}
+\item Closed Function: they make a complete statement capable of being true or false
+\item Closed Term: Has no variables.
+\end{itemize}
+
+\item Interpretation: An interpretation $M$ for a language $L$ consists of two components.
+\begin{itemize}
+\item A nonempty set $|M|$, called the domain or universe of discourse of the set of things $M$.
+\item For each non-logical symbol, a denotation assigned to it. Noted by $x^M$.
+
+\end{itemize} %end some defs for first-order logic.
+
