Figuring things out.

--- a/lec.tex
+++ b/lec.tex
@@ -512,6 +512,7 @@ $\forall n$( if $M$ has not halted before time n, then $\Delta \vDash \mathbb{D}
 
 
 \large{First-Order Logic Revamp:}
+%From Chapt. 9:
 Some definitions for first-order logic: \\
 \begin{itemize}
 \item Logical Symbols: \\
@@ -550,6 +551,8 @@ Empty Language: $L_\varnothing$, The language with no logical symbols.
 \begin{itemize}
 \item A nonempty set $|M|$, called the domain or universe of discourse of the set of things $M$.
 \item For each non-logical symbol, a denotation assigned to it. Noted by $x^M$.
+\end{itemize} %End Interpretations
 
 \end{itemize} %end some defs for first-order logic.
 
+%\end{itemize} % End 
