--- a/lec.tex
+++ b/lec.tex
@@ -330,8 +330,8 @@ Some symbols n things:
 
 \begin{definition}[Term]
 \begin{itemize}
-\item Every variable is a term.
-\item Every constant is a term. (or name)
+\item Every variable is a(n atomic) (open) term.
+\item Every constant is a(n atomic) (closed) term. %(or name?)
 \item If $t_1,\dots,t_n$ are terms, then $f^n(t_1,\dots,t_n)$ is a term.  
 \item Nothing else is a term.
 \end{itemize}
@@ -339,8 +339,8 @@ Some symbols n things:
 
 \begin{definition}[Formula]
 \begin{itemize}
-\item $A^n(t_1,\dots,t_n)$ is a formula where $A^n$ is an $n-$place predcate and $t_i$ are terms.
-\item If $F$ is a formula then $_F$ is a formula
+\item $A^n(t_1,\dots,t_n)$ is a formula where $A^n$ is an $n-$place predcate and $t_i$ are terms. (This is an atomic formula).
+\item If $F$ is a formula then $-F$ is a formula
 \item If $F$ and $G$ are fomulas then $(F\wedge G)$ is a formula.
 \item If $F$ and $G$ are fomulas then $F(\vee G)$ is a formula.
 \item If $F$ is a formula, then $\exists vF$ is a formula.
@@ -349,9 +349,16 @@ Some symbols n things:
 \end{itemize}
 \end{definition}
 
+
 \begin{definition}[Bound]
-An occurence of a variable $v$ in a formula $F$ is bound if it is in a part $G$ of $F$ where
-G = $\exists v \_\_\_\_\_\_\_$ or $G = \forall v \_\_\_\_\_\_\_\_\_\_\_\_\_.$
+%From lecture:
+%An occurence of a variable $v$ in a formula $F$ is bound if it is in a part $G$ of $F$ where
+%G = $\exists v \_\_\_\_\_\_\_$ or $G = \forall v \_\_\_\_\_\_\_\_\_\_\_\_\_.$
+
+%From Textbook:
+An occurrence of variable $x$ is bound if it is part of a subformula beginning $\forall x$ or $\exists x$, in which case the quantifier $\forall$ or $\exists$ in question is said to bind that occurrence of the variable $x$, and otherwise the occurrence of the variable $x$ is free. \\
+Ex: $Fx \rightarrow \forall x F x$ : The first x is free, and the second is bound. \\
+Ex: $x < y \wedge - \exists z ( x < z \wedge z < y )$: all occurrences of $x$ and $y$ are free, and all the occurrences of $z$ are bound.
 \end{definition}
 
 \begin{definition}[Model]
@@ -377,7 +384,7 @@ A model $M$ (interpretation) of a language $L$ is $\{|M| v\}$ Where $|M|$ is a n
 \begin{definition}
 of the denoteizan/extension of a closed term in a model M.
 If $T$ is a name $M(t) = v(t)$
-I $t$ is $f^n(t_1,\dots,t_n)$
+If $t$ is $f^n(t_1,\dots,t_n)$
 then \\
 $M(f^n(t_1,\dots,t_n)$
 $M(f^n)(M(t_1),\dots,M(t_n)).$
